--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*!
-Theme Name: WordPress Starter Theme
+Theme Name: Watermelon-pixels
 Theme URI: http://watermelon-pixels.fr
 Author: Benoît Vigouroux
-Author URI: http://mattbanks.me
+Author URI: http://watermelon-pixels.fr
 Description: My Wordpress base theme with Gulp, Sass and Susy for better worklflow for building custom themes.
 Version: 1.0
 License: GNU General Public License v2.0
