--- a/assets/src/scss/elements/_elements.scss
+++ b/assets/src/scss/elements/_elements.scss
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-	background: $color__background-body; /* Fallback for when there is no custom background color defined. */
+	background: $color__background-screen; /* Fallback for when there is no custom background color defined. */
 }
 
 blockquote, q {
@@ -36,3 +36,4 @@ img {
 }
 
 @import "tables";
+@import "icons";
