--- a/assets/src/scss/layout/_header.scss
+++ b/assets/src/scss/layout/_header.scss
@@ -1,28 +1,40 @@
 .site-header{
 	background-color: $grey-dark;
-    border-bottom: 1px solid #e4e4e4;
-    border-top: 1px solid #e4e4e4;
+/*     border-bottom: 1px solid #e4e4e4;
+border-top: 1px solid #e4e4e4; */
     display: block;
-    padding-top: 15px;
+    position: fixed;
+    top:0;
+    left:0;
+    right:0;
+    z-index: 2
 }
 
-.site-branding{
-    box-sizing: border-box;
-    display: block;
-    float: left;
-    height: 41px;
-    margin-top: -1px;
-    padding: 0 15px;
-    text-shadow: 0 1px 0 #fff;
-}
+.site-title {
+    height: 45px;
+    margin: 0;
+    padding:0;
 
-.site-title{
-	margin:0;
-	padding: 0 15px;
-    height: 40px;
-    margin-top: 0;
+    > a {
+        font-size: 10px;
+        margin: 0;
+        padding: 0;
+        width: auto;
+    }
 }
 
 .site-baseline {
-	font-size: 14px
+    font-size: 12px;
+    margin: 0;
+    color:#fff;
+    font-weight: 100;
+    text-transform: uppercase;
+}
+
+.site-branding{
+    display: block;
+    float: left;
+    height: 41px;
+    margin-right: 30px;
+    text-align: center;
 }
