--- a/assets/src/scss/typography/_headings.scss
+++ b/assets/src/scss/typography/_headings.scss
@@ -1,3 +1,11 @@
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
+	font-weight: 300
+}
+
+.entry-title{
+	text-transform: uppercase;
+	font-weight: 300;
+	font-size: 40px;
+	color: $color__link
 }
