--- a/assets/src/scss/variables-site/_colors.scss
+++ b/assets/src/scss/variables-site/_colors.scss
@@ -26,5 +26,10 @@ $grey-med-dark: #999;
 $grey-dark: $color__link;
 
 $white: #fff;
+$black : #000;
 
 $placeholder-color : $color__background-body;
+
+/* Smart colors */
+$orange-red : rgba(196, 32, 3, 1);
+$purple-red : rgba(114, 1, 71, 1)
