--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -1,18 +1,53 @@
 .up-footer{
-	background-color:$grey-dark;
+	background-color:$black;
+/* 	transition: all 0.5s ease 0.2s;
+    bottom: 0;
+height: 0; 
+    padding-top: 0;*/
+    position: absolute;
+    width: 100%;
+    display: none;
+    overflow: hidden;
+    z-index: 0;
+    	bottom: 65px;
+		height: 85px;
+		padding-top: 15px;
+/* 		transition: all 1s ease 0.2s;
+
+&.open{
+    	transition: all 0.5s ease 0.2s;
+    	bottom: 65px;
+	height: 85px;
 	padding-top: 15px;
+	display: block;
 }
-.site-footer{
-	background-color: #3353B2;
-    border-bottom: 1px solid #e4e4e4;
-    border-top: 1px solid #e4e4e4;
+
+&.closed{
+    	transition: all 0.5s ease 0.2s;
+    	bottom: 0;
+    	height: 0;
+    	background-color:$white;
+    	color:$black;
+}	 */
+}
+
+.site-info-container{
+	width: 100%;
+	background-color: $purple-red;
+	background-image: linear-gradient(to left,$purple-red, $orange-red); 
     display: block;
     color:$white;
     font-weight: 100;
+    position: absolute;
+    bottom:0;
+    z-index: 1;
+}
 
-    a {
-    	color:$white;
-    }
+.site-footer{
+    position: relative;
+	    a {
+	    	color:$white;
+	    }
 
 	.socials{ 
 		li {
@@ -30,11 +65,31 @@
 			    text-decoration: none;
 			    transition: all 0.3s ease-out 0s;
 				&:hover {
-				    background-color: rgba(0, 0, 0, 0.8);
+				    background-color:$purple-red;
+				    background-image: linear-gradient(to top,$purple-red, $orange-red);
 				    color: $white;
 				}
 			}
 		}
+	}
+}
+
+#slide-toggle{
+	position:absolute;
+	font-size: 0;
+	left:50%;
+	height:50px;
+	width:50px;
+	border-radius: 50%;
+	margin-left:-25px;
+	bottom:40px;
+	background-color:$black;
+	border:1px solid $black;
+	box-shadow: 0 0 0 4px $color__background-screen;
+	z-index: 2;
+
+	span{
+	    font-size: 20px;
 	}
 }
 
