--- a/assets/src/scss/layout/_header.scss
+++ b/assets/src/scss/layout/_header.scss
@@ -1,25 +1,49 @@
 .site-header{
-	background-color: $grey-dark;
-/*     border-bottom: 1px solid #e4e4e4;
-border-top: 1px solid #e4e4e4; */
     display: block;
     position: fixed;
     top:0;
     left:0;
     right:0;
-    z-index: 2
+    z-index: 2;
+
+    &.shrink{
+        background-image: linear-gradient(to right,rgba(196, 32, 3, 0.9), rgba(114, 1, 71, 0.9)); 
+        //background-color: #810040;
+
+        .masthead{
+            padding: 10px 0;
+        }
+
+        .site-title a {
+            background-size: 75% auto
+        }
+    }
+
+    .masthead{
+        padding: 40px 0 40px 0;
+        position: relative;
+        text-align: left;
+        width: 100%;
+        transition: all 0.3s ease-out 0s;
+    }
 }
 
-.site-title {
+.site-title, 
+.logo-footer-wrapper {
     height: 45px;
     margin: 0;
     padding:0;
 
     > a {
-        font-size: 10px;
-        margin: 0;
-        padding: 0;
-        width: auto;
+        background: rgba(0, 0, 0, 0) url("../img/logo.png") no-repeat scroll left top;
+        float: left;
+        height: 45px;
+        overflow: hidden;
+        position: relative;
+        text-indent: -9999px;
+        width: 181px;
+        z-index: 2;
+        transition: all 0.3s ease-out 0s;
     }
 }
 
@@ -37,4 +61,9 @@ border-top: 1px solid #e4e4e4; */
     height: 41px;
     margin-right: 30px;
     text-align: center;
+}
+
+.fullscreen-background{
+    min-height: calc(100vh - 10px);
+    background: transparent url("../img/masthead-bkg.jpg") no-repeat fixed 50% 50% / cover 
 }
