simple option panel update

--- a/assets/src/scss/layout/_footer.scss
+++ b/assets/src/scss/layout/_footer.scss
@@ -1,34 +1,19 @@
 .up-footer{
 	background-color:$black;
-/* 	transition: all 0.5s ease 0.2s;
-    bottom: 0;
-height: 0; 
-    padding-top: 0;*/
     position: absolute;
     width: 100%;
     display: none;
     overflow: hidden;
     z-index: 0;
-    	bottom: 65px;
-		height: 85px;
-		padding-top: 15px;
-/* 		transition: all 1s ease 0.2s;
-
-&.open{
-    	transition: all 0.5s ease 0.2s;
-    	bottom: 65px;
+	bottom: 65px;
 	height: 85px;
 	padding-top: 15px;
-	display: block;
-}
 
-&.closed{
-    	transition: all 0.5s ease 0.2s;
-    	bottom: 0;
-    	height: 0;
-    	background-color:$white;
-    	color:$black;
-}	 */
+	button{
+		span {
+			transition: all 0.3s ease-out 0s;
+		}
+	}
 }
 
 .site-info-container{
