--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Watermelon-pixels
+Theme Name: Gulpsy
 Theme URI: http://watermelon-pixels.fr
 Author: Benoît Vigouroux
 Author URI: http://watermelon-pixels.fr
@@ -7,10 +7,10 @@ Description: My Wordpress base theme with Gulp, Sass and Susy for better worklfl
 Version: 1.0
 License: GNU General Public License v2.0
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: _waterpix
+Text Domain: _gulpsy
 Domain Path: /languages/
 Tags:
 
- _waterpix is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
+ _gulpsy is based on Underscores http://underscores.me/, (C) 2012-2014 Automattic, Inc.
 
 */
