--- a/assets/src/scss/forms/_fields.scss
+++ b/assets/src/scss/forms/_fields.scss
@@ -107,52 +107,52 @@ textarea {
     position: relative;
   }
 
-  form {
-    padding-right: 20px !important;
-    input{
-      &[type=text],
-      &[type=password],
-      &[type=submit] {
-        font-family: 'Roboto';
-      }
-      &[type=text],
-      &[type=password] {
-        width: 100%;
-        height: 40px;
-        margin-bottom: 10px;
-        padding-left: 15px;
-        background: #fff;
-        border: none;
-        color: #e74c3c;
-        outline: none;
-      }
-      &.button {
-        border: none;
-        display: block;
-        background: $grey-dark;
-        height: 40px;
-        width: 80px;
-        color: #ffffff;
-        text-align: center;
-        //border-radius : 5px;
-        //@include box-shadow( 0px 3px 1px #2075aa );
-        transition: all 0.3s ease-out 0s;
-        &:hover {
-          background: #1e75aa;
-          //@include box-shadow( 0 3px 1px #237bb2 );
-        }
-        &:active {
-          background: #136899;
-          //@inclue box-shadow( 0 3px 1px #0f608c );
-        }
-      }  
-      $placeholder-color: #e74c3c;
-      &::-webkit-input-placeholder {color: $placeholder-color;}
-      &:-moz-placeholder {color: $placeholder-color;}
-      &::-moz-placeholder {color: $placeholder-color;}
-      &:-ms-input-placeholder {color: $placeholder-color;}      
-    }
-  }
   .show {display: block;}
   .hide {display: none;}
+}
+form {
+
+  input{
+    &[type=text],
+    &[type=password],
+    &[type=submit] {
+      font-family: 'Roboto';
+    }
+    &[type=text],
+    &[type=password] {
+      width: 100%;
+      height: 40px;
+      margin-bottom: 10px;
+      padding-left: 15px;
+      background: #fff;
+      border: none;
+      color: #e74c3c;
+      outline: none;
+    } 
+    $placeholder-color: #e74c3c;
+    &::-webkit-input-placeholder {color: $placeholder-color;}
+    &:-moz-placeholder {color: $placeholder-color;}
+    &::-moz-placeholder {color: $placeholder-color;}
+    &:-ms-input-placeholder {color: $placeholder-color;}      
+  }
+  .button {
+    border: none;
+    display: block;
+    background: $grey-dark;
+    height: 40px;
+    width: 80px;
+    color: #ffffff;
+    text-align: center;
+    //border-radius : 5px;
+    //@include box-shadow( 0px 3px 1px #2075aa );
+    transition: all 0.3s ease-out 0s;
+    &:hover {
+      background: #1e75aa;
+      //@include box-shadow( 0 3px 1px #237bb2 );
+    }
+    &:active {
+      background: #136899;
+      //@inclue box-shadow( 0 3px 1px #0f608c );
+    }
+  }   
 }
