--- a/assets/src/scss/layout/_header.scss
+++ b/assets/src/scss/layout/_header.scss
@@ -28,6 +28,18 @@
     }
 }
 
+.banner--stick {
+    transform: translateY(0%);
+}
+.banner--clone {
+    background: #c95a5d none repeat scroll 0 0;
+    left: 0;
+    position: fixed;
+    top: 0;
+    transform: translateY(-100%);
+    transition: all 300ms ease-in-out 0s;
+}
+
 .site-title, 
 .logo-footer-wrapper {
     height: 45px;
